fix postcard spacing

--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,8 @@ header {
 }
 
 .postcard {
+  display: flex;
+  flex-direction: column;
 }
 
 .postcard > p {
